update everything
